# SimpleEngine

./: .gitignore  CMakeLists.txt  README.md  app.cpp  badloc.txt  imgui.ini
.cache/clangd/index/: _fixes.hpp.A4E4488C7CF1B45D.idx  _vectorize.hpp.1E4C2506DC61CB12.idx  app.cpp.769A9BC70710BC0B.idx  common.hpp.970E46EC4237373E.idx  components.h.084501BEA9D4B032.idx  compute_common.hpp.FFE25267C712D115.idx  compute_vector_decl.hpp.6FB19E7BA7BB0889.idx  compute_vector_relational.hpp.24BBE29EB4E4E088.idx  constants.hpp.CCB5DDCC62CD2A8A.idx  constants.inl.6BCB490C0FE5A87C.idx  dual_quaternion.hpp.1F5B87B2B053E243.idx  dual_quaternion.inl.070B1486588DD3BB.idx  engine.h.4271E8BABCF6E5C6.idx  entt.hpp.BA9FADC90D772FB8.idx  entt.hpp.DDE85E208E3BA978.idx  epsilon.hpp.4DEE8D5F491115DD.idx  epsilon.inl.32594ED2E37B09A1.idx  exponential.hpp.0A9DB7BDF44DE61F.idx  func_common.inl.5CFF3920E8B759F1.idx  func_exponential.inl.A21C2B578D54C54A.idx  func_geometric.inl.1EBC692D331B7F24.idx  func_integer.inl.1EA6BECD663D87F7.idx  func_matrix.inl.EF0F010155447E5D.idx  func_packing.inl.2B9C75CB5684B935.idx  func_trigonometric.inl.AC2B8EDE5A7235F4.idx  func_vector_relational.inl.5C6E37B06BC35FFF.idx  fwd.hpp.1BB969F6B05D63C5.idx  geometric.hpp.064991DE077A0270.idx  glad.c.9000B75C58A97000.idx  glad.h.1B5175407F5D29F7.idx  glad.h.47E5C085C208233D.idx  glm.cpp.ADEC0B8CEA7F984B.idx  glm.hpp.BDE9BEA46BF62E64.idx  inputManager.cpp.4D4D2121597DE418.idx  inputManager.h.23C4588B5B394667.idx  inputManager.h.833EDDA659B22DED.idx  integer.hpp.25B16277A809AFFE.idx  khrplatform.h.5C30ECC23BC7D3E1.idx  khrplatform.h.A896AF3947FD3E85.idx  mat2x2.hpp.561FC74561D7958D.idx  (+186 more)
app/: imguiImp.h
assets/: basic.frag  basic.vert  phongLight.frag  phongLight.vert
core/: CMakeLists.txt  engine.h  inputManager.cpp  inputManager.h  meshManager.cpp  meshManager.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shaderManager.cpp  shaderManager.h  textureManager.cpp  textureManager.h  window.cpp  window.h
core/include/core/: SystemManager.h  components.h  engine.h  inputManager.h  materialBinders.h  meshManager.h  pch.hpp  renderer.h  shader.h  system.h  textureManager.h  window.h
core/src/: SystemManager.cpp  inputManager.cpp  meshManager.cpp  renderer.cpp  shader.cpp  shaderManager.cpp  system.cpp  textureManager.cpp  window.cpp
core/systems/: system.cpp  system.h
entities/: components.h
systems/: System.h  system.cpp  system.h
